--- a/hugo.toml
+++ b/hugo.toml
@@ -64,7 +64,7 @@ languageName ="English"
 # Weight used for sorting.
 weight = 1
 [languages.en.params]
-title = "Goldydocs"
+title = "Amybo"
 description = "A Docsy example site"
 
 [languages.no]
