--- a/hugo.toml
+++ b/hugo.toml
@@ -190,10 +190,10 @@ enable = false
 # Developer relevant links. These will show up on right side of footer and in the community page if you have one.
 [[params.links.developer]]
   name = "GitHub"
-  url = "https://github.com/Amybo-org/pages"
+  url = "https://github.com/Amybo-org"
   icon = "fab fa-github"
   desc = "Development takes place here!"
-[[params.links.developer]]
+#[[params.links.developer]]
 #  name = "Slack"
 #  url = "https://example.org/slack"
 #  icon = "fab fa-slack"
