try to further remove Algolia search to stop warning

--- a/hugo.toml
+++ b/hugo.toml
@@ -127,6 +127,8 @@ gcs_engine_id = "d72aa9b2712488cc3"
 
 # Enable Algolia DocSearch
 algolia_docsearch = false
+[params.search]
+  algolia = false
 
 # Enable Lunr.js offline search
 offlineSearch = false
